kubernetes/addons/storage/longhorn/dashboards/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: storage
  annotations:
    kubernetes.io/ingress.class: traefik-external
    external-dns.alpha.kubernetes.io/target: javstudio.org
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.javstudio.org`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy
          namespace: iam
      services:
        - kind: Service
          name: longhorn-frontend
          port: 80
  tls:
    secretName: wildcard-javstudio-org-tls
